cmake_minimum_required(VERSION 3.27)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Print main.cpp)
add_executable(Variables variable.cpp)
add_executable(Namespaces namespaces.cpp)
add_executable(TypedefAndTypeAliases typedef_and_type_aliases.cpp)
add_executable(Arithmetic_Operators arithmetic_operators.cpp)
add_executable(Type_Conversion type_conversion.cpp)
add_executable(User_Input user_input.cpp)
add_executable(Math_functions math_functions.cpp)
add_executable(Hypotenuse_Calculator hypotenuse_calculator.cpp)
add_executable(If_Statements if_statements.cpp)
add_executable(Switches switches.cpp)
add_executable(Ternary_Operator ternary_operator.cpp)
add_executable(Logical_Operators logical_operators.cpp)
add_executable(Useful_String_Methods useful_string_method.cpp)
add_executable(While_Loops while_loops.cpp)
add_executable(For_Loops for_loops.cpp)
add_executable(Break_Continue break_continue.cpp)
add_executable(Random_Numbers random_numbers.cpp)
add_executable(User_Defined_Functions user_designed_functions.cpp)
add_executable(Return_Keyword return_keyword.cpp)
add_executable(Overloaded_Functions overloaded_functions.cpp)
add_executable(Variable_Scopes variable_scope.cpp)
add_executable(Arrays arrays.cpp)
add_executable(Sizeof_Operator sizeof_operator.cpp)
add_executable(Iterate_Over_An_Array iterate_over_an_array.cpp)
add_executable(Foreach_Loops foreach_loop.cpp)
add_executable(Pass_Array_To_Function pass_array_to_function.cpp)
add_executable(Search_An_Array search_an_array.cpp)
add_executable(Sort_An_Array sort_an_array.cpp)
add_executable(Fill_Function fill_function.cpp)
add_executable(Multidimensional_Arrays multidimensional_arrays.cpp)
add_executable(Memory_Address memory_address.cpp)
add_executable(Pointers pointers.cpp)
add_executable(Dynamic_Memory dynamic_memory.cpp)
add_executable(Recursion recursion.cpp)
add_executable(Function_Templates function_template.cpp)
add_executable(Structs structs.cpp)
add_executable(Enums enums.cpp)
add_executable(Object_Oriented_Programming object_oriented_programming.cpp)
add_executable(Constructors constructors.cpp)
add_executable(Constructor_Overloading constructor_overloading.cpp)
add_executable(Getters_And_Setters getters_and_setters.cpp)
add_executable(Inheritance inheritance.cpp)
add_executable(Testing testing.cpp)

